--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'tailwindcss/base'
+@import 'tailwindcss/components'
+@import 'tailwindcss/utilities'
+
+body
+  margin: 0
+
+.bg-primary
+  background-color: #1E1E1E
+
+.bg-secondary
+  background-color: #212121
