--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,9 +1,10 @@
 <div class="bg-secondary text-white h-screen">
-  <div class="p-8 bg-purple-800">
+  <div class="p-8 bg-purple-800 cursor-pointer" (click)="goHome()">
     <h3 class="font-mono text-center text-2xl">xBin</h3>
   </div>
   <div>
-    <div class="items-center pt-4 px-8 mb-4">
+    <h4 class="font-mono text-center text-xl pb-4 pt-6">Editor Options</h4>
+    <div class="items-center px-8">
       <label for="theme" class="text-center font-mono pb-2">Theme:</label>
       <select id="theme" [(ngModel)]="selectedTheme" class="form-select appearance-none
       block
@@ -24,13 +25,14 @@
         <option *ngFor="let theme of themes; index as i" [selected]="i===0" [value]="theme">{{theme}}</option>
       </select>
     </div>
-    <div class="px-8 pb-8">
+    <div class="px-8">
       <label for="fontSize" class="text-center font-mono">Font Size</label>
       <br>
       <input #fontSlider type="range" id="fontSize" max="22" min="12" (change)="onChangeFont(fontSlider.value)"
              [value]="fontSize" step="1" class="w-full form-check-input">
     </div>
-    <div class="items-center form-check pt-6 pb-0 px-8">
+    <h4 class="font-mono text-center text-xl py-4">Snippet Options</h4>
+    <div class="items-center form-check pb-0 px-8">
       <input type="checkbox" id="showAll" (change)="swapList()" class="form-check-input">
       <label for="showAll" class="text-center font-mono"> Show All Languages</label>
     </div>
@@ -58,16 +60,16 @@
     </div>
     <div class="items-stretch form-check px-8 pb-4">
       <input type="checkbox" id="ephemeral" class="form-check-input"
-            [(ngModel)]="this.snippet.metadata.ephemeral" >
+            [(ngModel)]="this.snippet.metadata.ephemeral" [disabled]="readOnlyEditor" >
       <label for="ephemeral" class="text-center font-mono"> Delete after 7 days</label>
     </div>
     <div class="flex space-x-2 justify-center">
-      <button *ngIf="this.snippet.metadata.id === ''" type="button" (click)="onSave()"
+      <button *ngIf="!readOnlyEditor" type="button" (click)="onSave()"
               class="inline-block w-5/6 px-6 py-2.5 bg-purple-800 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
         <p *ngIf="!this.snippet.metadata.ephemeral">Save</p>
         <p *ngIf="this.snippet.metadata.ephemeral">Save for 7 days</p>
       </button>
-      <button *ngIf="this.snippet.metadata.id !== ''" type="button" (click)="onEdit()"
+      <button *ngIf="readOnlyEditor" type="button" (click)="onEdit()"
               class="inline-block w-5/6 px-6 py-2.5 bg-purple-800 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
         Edit
       </button>
