Handle Errors on GET, disable button while request is processing

--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -64,7 +64,7 @@
       <label for="ephemeral" class="text-center font-mono"> Delete after 7 days</label>
     </div>
     <div class="flex space-x-2 justify-center">
-      <button *ngIf="!readOnlyEditor" type="button" (click)="onSave()"
+      <button *ngIf="!readOnlyEditor" type="button" (click)="onSave()" [disabled]="loading"
               class="inline-block w-5/6 px-6 py-2.5 bg-purple-800 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
         <p *ngIf="!this.snippet.metadata.ephemeral">Save</p>
         <p *ngIf="this.snippet.metadata.ephemeral">Save for 7 days</p>
