--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -74,5 +74,10 @@
         Edit
       </button>
     </div>
-  </div>
+    <div class="flex space-x-2 justify-center mt-3" *ngIf="readOnlyEditor">
+      <button type="button" (click)="goRaw()"
+              class="inline-block w-5/6 px-6 py-2.5 bg-pink-700 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
+        raw
+      </button>
+    </div>  </div>
 </div>
