--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,6 +1,6 @@
 <div class="bg-secondary text-white h-screen">
   <div class="p-8 bg-purple-800 cursor-pointer" (click)="goHome()">
-    <h3 class="font-mono text-center text-2xl">xBin</h3>
+    <h3 class="font-mono text-center text-2xl">Snippets</h3>
   </div>
   <div>
     <h4 class="font-mono text-center text-xl pb-4 pt-6">Editor Options</h4>
@@ -21,14 +21,16 @@
       ease-in-out
       mx-0
       mt-0.5
-      focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" (change)="onChangeTheme(themeSelector.value)">
-        <option *ngFor="let theme of themes; index as i" [selected]="isThemeSelected(theme)" [value]="theme">{{theme}}</option>
+      focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+              (change)="onChangeTheme(themeSelector.value)">
+        <option *ngFor="let theme of themes; index as i" [selected]="isThemeSelected(theme)"
+                [value]="theme">{{theme}}</option>
       </select>
     </div>
-    <div class="px-8">
+    <div class="px-8 mt-1">
       <label for="fontSize" class="text-center font-mono">Font Size</label>
       <br>
-      <input #fontSlider type="range" id="fontSize" max="22" min="12" (change)="onChangeFont(fontSlider.value)"
+      <input #fontSlider type="range" id="fontSize" max="26" min="10" (change)="onChangeFont(fontSlider.value)"
              [value]="fontSize" step="1" class="w-full form-check-input">
     </div>
     <h4 class="font-mono text-center text-xl py-4">Snippet Options</h4>
@@ -36,7 +38,7 @@
       <input type="checkbox" id="showAll" (change)="swapList()" class="form-check-input">
       <label for="showAll" class="text-center font-mono"> Show All Languages</label>
     </div>
-    <div class="items-center px-8 mt-0 mb-6">
+    <div class="items-center px-8 mt-0">
       <label for="language" class="text-center font-mono pb-2">Language:</label>
       <select id="language" [(ngModel)]="snippet.metadata.language" class="form-select appearance-none
       block
@@ -58,20 +60,19 @@
                 [value]="language">{{language}}</option>
       </select>
     </div>
-    <div class="items-stretch form-check px-8 pb-4">
+    <div class="items-stretch form-check px-8 py-3">
       <input type="checkbox" id="ephemeral" class="form-check-input"
-            [(ngModel)]="this.snippet.metadata.ephemeral" [disabled]="readOnlyEditor" >
-      <label for="ephemeral" class="text-center font-mono"> Delete after 7 days</label>
+             [(ngModel)]="this.snippet.metadata.ephemeral" [disabled]="readOnlyEditor">
+      <label for="ephemeral" class="text-center font-mono"> Save Temporarily</label>
     </div>
     <div class="flex space-x-2 justify-center">
       <button *ngIf="!readOnlyEditor" type="button" (click)="onSave()" [disabled]="loading"
               class="inline-block w-5/6 px-6 py-2.5 bg-purple-800 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
-        <p *ngIf="!this.snippet.metadata.ephemeral">Save</p>
-        <p *ngIf="this.snippet.metadata.ephemeral">Save for 7 days</p>
+        <p>Save</p>
       </button>
       <button *ngIf="readOnlyEditor" type="button" (click)="onEdit()"
               class="inline-block w-5/6 px-6 py-2.5 bg-purple-800 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
-        Edit
+        Duplicate and Edit
       </button>
     </div>
     <div class="flex space-x-2 justify-center mt-3" *ngIf="readOnlyEditor">
@@ -79,5 +80,9 @@
               class="inline-block w-5/6 px-6 py-2.5 bg-pink-700 text-white font-medium text-xs leading-tight uppercase rounded shadow-lg hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
         raw
       </button>
-    </div>  </div>
+    </div>
+  </div>
+  <div>
+    <h4 class="font-mono text-center text-l pb-4 pt-6 cursor-pointer" (click)="goAbout()">ℹ️ About</h4>
+  </div>
 </div>
