Replace about and home headings with anchor tags

--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,6 +1,6 @@
 <div class="bg-secondary text-white h-screen">
-  <div class="p-8 bg-purple-800 cursor-pointer" (click)="goHome()">
-    <h3 class="font-mono text-center text-2xl">Snippets</h3>
+  <div class="p-8 bg-purple-800">
+    <a class="font-mono text-center text-2xl block" href="/">Snippets</a>
   </div>
   <div>
     <h4 class="font-mono text-center text-xl pb-4 pt-6">Editor Options</h4>
@@ -83,6 +83,6 @@
     </div>
   </div>
   <div>
-    <h4 class="font-mono text-center text-l pb-4 pt-6 cursor-pointer" (click)="goAbout()">ℹ️ About</h4>
+    <a class="font-mono text-center text-l pb-4 pt-6 cursor-pointer block" href="/About">ℹ️ About</a>
   </div>
 </div>
