Add Privacy Policy and GitHub sections to sidemenu
Signed-off-by: Sid Sun <sid@sidsun.com>

--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -83,6 +83,8 @@
     </div>
   </div>
   <div>
-    <a class="font-mono text-center text-l pb-4 pt-6 cursor-pointer block" href="/About">ℹ️ About</a>
+    <a class="font-mono text-center text-l mt-4 mb-3 cursor-pointer block" href="/About">ℹ️ About</a>
+    <a class="font-mono text-center text-l my-3  cursor-pointer block" href="https://github.com/fitant" target="_blank">GitHub</a>
+    <a class="font-mono text-center text-l my-3 cursor-pointer block" href="/PrivacyPolicy">Privacy Policy</a>
   </div>
 </div>
